[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Xinghua Liu
author_email = xinghua.liu94@gmail.com
description = python classes package for ID900-MASTER
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/XinghuaLiu/ID900
project_urls =
    Bug Tracker = https://github.com/XinghuaLiu/ID900/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU 3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src